# orientation-angle-and-flip-detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: train.sh
scripts/dataset_converters/: from_folder.py
scripts/label_tool/: analysis_data.py  check_label_data.py  create_empty_label_file.py  label.html  utils.py
src/orientation_angle_and_flip_detection/: model.py  predict.py  train.py
