[project]
name            = "orientation-angle-and-flip-detection"
version         = "0.0.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.13"
dependencies    = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
    "trl>=0.19.1",
]

[tool.ruff]
line-length = 130
